--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ django-grappelli = "4.0.1"
 environs = "11.0.0"
 gunicorn = "23.0.0"
 pytelegrambotapi = "4.22.1"
-aiohttp = '3.10.5'
-
+aiohttp = "3.10.5"
+psycopg2-binary = "^2.9"
 
 [build-system]
 requires = ["poetry-core"]
